@@ -1,0 +1,26 @@
+<div class="panel panel-default">
+	<div class="panel-heading luga-docs-api-heading">luga.localStorage.retrieve(root, path)</div>
+	<div class="panel-body">
+		A modern, simple alternative to jQuery's .ready().
+		Invoke the given function as soon as the DOM is loaded
+	</div>
+	<table class="table  luga-docs-api">
+		<th colspan="3">Arguments</th>
+		<tr>
+			<td>fn</td>
+			<td>
+				{Function}
+			</td>
+			<td>
+				Function to be invoked
+			</td>
+		</tr>
+	</table>
+	<table class="table  luga-docs-api">
+		<th>Examples</th>
+	</table>
+
+<pre><code class="language-javascript">luga.dom.ready(console.log("Ready to go"));
+</code></pre>
+
+</div>
