@@ -1,5 +1,5 @@
 <div class="panel panel-default">
-	<div id="format" class="panel-heading luga-docs-api-heading">luga.localStorage.retrieve(root, path)</div>
+	<div class="panel-heading luga-docs-api-heading">luga.localStorage.retrieve(root, path)</div>
 	<div class="panel-body">
 		Retrieve from localStorage the string corresponding to the given combination of root and path.
 		Returns undefined if nothing matches the given root/path
@@ -42,7 +42,7 @@ luga.localStorage.retrieve("myRoot", "test.name"); // => "Ciccio"
 </div>
 
 <div class="panel panel-default">
-	<div id="populate" class="panel-heading luga-docs-api-heading">luga.localStorage.persist(root, path, value)</div>
+	<div class="panel-heading luga-docs-api-heading">luga.localStorage.persist(root, path, value)</div>
 	<div class="panel-body">
 		Persist the given string inside localStorage, under the given combination of root and path.
 		The ability to pass a dot-delimited path allow to protect the information from name clashes
