@@ -4,13 +4,16 @@
 		<a href="#common/index">luga</a>
 	</li>
 	<li class="list-group-item">
+		<a href="#common/dom">luga.dom</a>
+	</li>
+	<li class="list-group-item">
 		<a href="#common/form">luga.form</a>
 	</li>
 	<li class="list-group-item">
-		<a href="#common/string">luga.string</a>
+		<a href="#common/localStorage">luga.localStorage</a>
 	</li>
 	<li class="list-group-item">
-		<a href="#common/localStorage">luga.localStorage</a>
+		<a href="#common/string">luga.string</a>
 	</li>
 	<li class="list-group-item">
 		<a href="#common/notifier">luga.Notifier</a>
