@@ -25,6 +25,24 @@ describe("luga.dom", function(){
 		expect(luga.dom).toBeDefined();
 	});
 
+	describe(".ready()", function(){
+
+		it("Invoke the given function as soon as the DOM is loaded", function(){
+			var mock = {
+				callBack: function(){
+				}
+			};
+			spyOn(mock, "callBack");
+			luga.dom.ready(mock.callBack);
+
+			var eventToTrigger = new Event("DOMContentLoaded");
+			document.dispatchEvent(eventToTrigger);
+
+			expect(mock.callBack).toHaveBeenCalled();
+		});
+
+	});
+
 	describe(".nodeIterator.getInstance()", function(){
 
 		describe("Is a static, factory method", function(){
